[package]
name = "adc-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
heapless = "0.7.7"
longan-nano = { version = "0.3.0", features = ["lcd"] }
panic-halt = "0.2.0"
riscv-rt = "0.8.0"
